--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".WorkoutActivity" />
+        <activity android:name=".DietActivity" />
         <activity android:name=".FormActivity" />
     </application>
 
