feat: package refactor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Healthier"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".WorkoutActivity" />
-        <activity android:name=".DietActivity" />
-        <activity android:name=".FormActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.WorkoutActivity" />
+        <activity android:name=".activity.DietActivity" />
+        <activity android:name=".activity.FormActivity" />
     </application>
 
 </manifest>
